# cuda_sgemm_playground

./: .clangd  .gitignore  CMakeLists.txt  README.md  gemm.cu  gemm_bench.cu  gemm_prof.cu  gemm_test.cu  kernel1.cu
.cache/clangd/index/: gemm.cu.15FF0DECD89637A4.idx
common/: helper.cuh  helper.h
include/: checker.cuh  checker.h  gemm_utils.cuh  helper.h  launcher.cuh  launcher.h  launcher_templates.h  running.h  tools.h
scripts/: check-leak.sh  cmake-rebuild.sh  cmake-release.sh  run-bench.sh  run-prof.sh
src/: checker.cu  cutlass.cu  kernels.cu  running.cu  tools.cu
